se agregan excepciones

--- a/xNube/app/views/servicios/index.html.erb
+++ b/xNube/app/views/servicios/index.html.erb
@@ -1,25 +1,14 @@
 
 
-# rails generate scaffold inventario ln part site site_desc loc lot ref loc_des create expire qty_oh qty_all status
+# Nube 2.0
 <br/>
-<%= link_to 'Index Inventario', inventarios_path %>
+# Ultima actualización del inventario: <%=@fecha%>
 <br/>
-<%= link_to 'Descargar Inventario', servicios_descargar_stocks_path %>
+<%= link_to 'Inventario BD', inventarios_path %>
 <br/>
-<%= link_to 'Ver xml', servicios_view_xml_path %>
+<%= link_to 'SKUs Excluidos', exceps_path %>
 <br/>
-
-<line ln="1">
-<part>100103</part>
-<site>100</site>
-<site_desc>PLANTA CHILLAN</site_desc>
-<loc>dd0101</loc>
-<lot>160917 p 47 filtra</lot>
-<ref/>
-<loc_des>DETERIORADOS Y OBSOLETOS</loc_des>
-<create>20/09/17</create>
-<expire>15/03/18</expire>
-<qty_oh>        1.000000</qty_oh>
-<qty_all>        0.000000</qty_all>
-<status>N-N-N</status>
-</line>
+<%= link_to 'Servicio Descargar Inventario', servicios_descargar_stocks_path %>
+<br/>
+<%= link_to 'Servicio xml filtrado', servicios_view_xml_path %>
+<br/>
